[package]
name = "mademath2"
version = "0.1.0"
authors = ["Matthias Deiml <matthias@deiml.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"
bincode = "1.2"
